# youtube-up-agy

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  settings.yaml
.agent/rules/: github-flow.md
docs/: ARCHITECTURE.md  METADATA_SPEC.md  QUOTA_INCREASE.md
src/: ai.py  auth.py  config.py  history.py  logger.py  main.py  metadata.py  profiles.py  scanner.py  uploader.py
src/commands/: history.py  playlist.py  quota.py  retry.py  reupload.py  sync.py  upload.py  video.py
src/lib/auth/: auth.py
src/lib/core/: config.py
src/lib/data/: history.py
src/lib/video/: manager.py  metadata.py  playlist.py  uploader.py
src/services/: sync_manager.py  upload_manager.py
tests/: conftest.py  test_ai.py  test_auth.py  test_config.py  test_history.py  test_logger.py  test_main.py  test_metadata.py  test_profiles.py  test_scanner.py  test_uploader.py
tests/commands/: test_cli.py  test_history.py  test_playlist_command.py  test_sync.py  test_video.py
tests/lib/data/: test_history_manager.py
tests/lib/video/: test_manager.py  test_metadata.py  test_playlist.py
