[project]
name = "youtube-up-agy"
version = "0.1.0"
description = "Efficient YouTube Bulk Uploader with AI Metadata Generation"
authors = [
    {name = "Antigravity", email = "antigravity@google.com"},
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "google-api-python-client>=2.111.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.26.0",
    "tenacity>=8.2.3",
    "xxhash>=3.4.1",
    "google-generativeai>=0.3.0",
    "tinydb>=4.8.0",
]

[project.scripts]
yt-up = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
